Add gometalinter to travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,5 +3,9 @@ go:
   - 1.6
   - 1.7
   - tip
+install:
+  - go get -u gopkg.in/alecthomas/gometalinter.v1
+  - gometalinter.v1 --install
 script:
+  - gometalinter.v1 --vendor --disable-all --enable=vet --enable=vetshadow --enable=golint ./...
   - go build
