--- a/.travis.yml
+++ b/.travis.yml
@@ -1,15 +1,12 @@
 language: go
 go:
-  - "1.6"
-  - "1.7"
-  - "1.8"
   - "1.9"
   - "1.10"
   - "1.11"
+  - "1.12"
   - tip
 install:
-  - go get -u gopkg.in/alecthomas/gometalinter.v1
-  - gometalinter.v1 --install
+  - curl -sfL https://install.goreleaser.com/github.com/golangci/golangci-lint.sh | sh -s -- -b $(go env GOPATH)/bin v1.16.0
 script:
-  - gometalinter.v1 --vendor --disable-all --enable=vet --enable=vetshadow --enable=golint ./...
+  - golangci-lint run
   - go build
