--- a/.travis.yml
+++ b/.travis.yml
@@ -3,8 +3,11 @@ go:
   - "1.11"
   - "1.12"
   - "1.13"
+env:
+  - GO111MODULE=on
 install:
   - curl -sfL https://install.goreleaser.com/github.com/golangci/golangci-lint.sh | sh -s -- -b $(go env GOPATH)/bin v1.20.0
 script:
+  - go mod download
   - golangci-lint run
   - go build
