--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,7 +9,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        go-version: ["1.18.x", "1.19.x", "1.20.x"]
+        go-version: ["1.18.x", "1.19.x", "1.20.x", "1.21.x"]
     steps:
       - name: Checkout
         uses: actions/checkout@v3
